[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/scripts/Prop.gd" type="Script" id=1]
[ext_resource path="res://assets/scenes/Reward.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/scenes/Health.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/scripts/PropHealth.gd" type="Script" id=4]
[ext_resource path="res://assets/scripts/HitBox.gd" type="Script" id=5]
[ext_resource path="res://assets/scripts/Class_AreaExtended.gd" type="Script" id=6]
[ext_resource path="res://assets/sounds/bustcrate2.wav" type="AudioStream" id=8]

[sub_resource type="BoxShape" id=15]

[sub_resource type="BoxShape" id=16]

[sub_resource type="BoxShape" id=17]

[node name="PropChair" type="RigidBody" groups=["Destructibles", "Props"]]
collision_layer = 4
collision_mask = 13
continuous_cd = true
script = ExtResource( 1 )
realName = "Chair"
rotationAcceleration = 1.5

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 15 )

[node name="Reward" parent="." instance=ExtResource( 2 )]
rewardAmount = 10

[node name="Health" parent="." instance=ExtResource( 3 )]
script = ExtResource( 4 )
hurtSound = ExtResource( 8 )

[node name="HitBox" type="Area" parent="." groups=["Destructibles", "Props", "Repairables"]]
collision_layer = 64
collision_mask = 0
script = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="HitBox"]
shape = SubResource( 16 )

[node name="OccupiedArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 10
script = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="OccupiedArea"]
shape = SubResource( 17 )

[node name="Model" type="Spatial" parent="."]

[connection signal="damage_taken" from="." to="Health" method="_on_damage_taken"]
[connection signal="repair_received" from="." to="Health" method="_on_repair_received"]
[connection signal="give_reward" from="Health" to="Reward" method="_on_give_reward"]
[connection signal="hitbox_collision" from="HitBox" to="Health" method="_on_hitbox_collision"]
[connection signal="hitbox_hit_heal" from="HitBox" to="Health" method="_on_hitbox_hit_heal"]
[connection signal="body_entered" from="OccupiedArea" to="OccupiedArea" method="_on_body_entered"]
[connection signal="body_exited" from="OccupiedArea" to="OccupiedArea" method="_on_body_exited"]
